--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Railway Management system</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/fabicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="form.html">
 </head>
 <body>
     <header class="header-area">
