--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a href="">Login</a>
               <a href="">Verify Ticket</a>
               <a href="">Contact Us</a>
-              <a  href="file:///E:/kamrul%20ptoject/form.html">Register</a>
+              <a href="http://127.0.0.1:5500/form.html">Register</a>
             </ul>
            </div>
         </nav>
