--- a/form.html
+++ b/form.html
@@ -86,18 +86,14 @@
     <input class="input-area"  type="text" placeholder="Enter Your Last Name ">
     <h4  class="input-text">Email</h4>
     <input class="input-area"  type="email" placeholder="Enter Your Email">
+    <h4  class="input-text">Password</h4>
+    <input class="input-area"  type="Password" placeholder="Enter Your Password">
     <h4  class="input-text">Phone</h4>
     <input class="input-area"  type="number" placeholder="Enter Your Phone Number">
-    <h4  class="input-text">reservation Date</h4>
+    <h4  class="input-text">Date</h4>
     <input class="input-area"  type="date" placeholder="">
-    <h4  class="input-text">reservation Time</h4>
+    <h4  class="input-text"> Time</h4>
     <input class="input-area"  type="time" placeholder="">
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Open this select menu</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
 <h4  class="input-comment">comments (optional)</h4>
 <textarea class="form-control" id="exampleFormControlTextarea1"></textarea>
      
