--- a/form.html
+++ b/form.html
@@ -79,7 +79,7 @@
     <section class="form-main-area">
         
 
-    <h1 class="form-text">Restaurent reservation Form</h1>
+    <h1 class="form-text">Registration Form</h1>
     <h4 class="input-text">First Name</h4>
     <input class="input-area" type="text" placeholder="Enter Your first Name ">
     <h4  class="input-text">Last Name</h4>
